- Connector/C++ doesn't implement MYSQL_OPT_SSL_VERIFY_SERVER_CERT,
  MYSQL_OPT_SSL_CRL, MYSQL_OPT_SSL_CRLPATH. Introduced connection options
  "sslVerify"(boolean), "sslCRL" and "sslCRLPath"(string). (Bug#18461451)
- Methods returning driver version information are now parametrized, and those
  parameters take their values from cmake config (Bug#14680878/66975)

- Built against libmysql 5.6.

GA  1.1.3 - 2013-03-22
- Added boolean connection option OPT_ENABLE_CLEARTEXT_PLUGIN allowing to
  enable cleartext libmysql plugin. That plugin is required for some
  authentication methods, e.g. PAM. (Bug#16520952)
- getBestRowIdentifier() now considers unique not nullable indexes in case
  when primary key does not exist. (Bug#16277170)
- False value of the metadataUseInfoSchema connection option had no effect
  in database metadata object.

GA  1.1.2 - 2013-01-16
- Expired password support. Connection options
  OPT_CAN_HANDLE_EXPIRED_PASSWORDS(bool, application can deal with expired
  passwords), and preInit(string, commands to run prior to driver
  initialization commands) have been introduced. (Bug#15936764/67325)

- postInit connection string has been introduced. Similar to preInit, but
  commands are run after driver's initialization.

- Statement::executeUpdate can now execute multiple statements.
  CLIENT_MULTI_STATEMENTS connection option still has to be selected.
  getUpdateCount will return data for the last executed statement.

- ABI change - MySQL_Connection class object size changed. If you don't use
  that class directly you shouldn't be affected by that.

- Built against libmysql 5.6.10

GA  1.1.1 - 2012-08-06

- DatabaseMetaData::getSQLKeywords() updated to match MySQL 5.5. Note
  that C/C++, just like C/JDBC, returns the same list for every
  MySQL database version. (Ulf)

- Added MySQL_Connection::getLastStatementInfo() which returns back the
  value of the mysql_info() function of libmysql / Connector/C. (Andrey)
